<resources>
  <string name="app_name">LombaaFireTV</string>
  <string name="projects_title">Projects</string>
  <string name="settings_title">Settings</string>
  <string name="home">Home</string>
  <string name="history">History</string>
  <string name="contact">Contact Us</string>
  <string name="address">Address:</string>
  <string name="phone_number">Phone Number:</string>
  <string name="email_id">Email Id:</string>
  <string name="recent_movies">Recent Movies</string>

</resources>