<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="com.lombaa.firetv.ui.menu.MenuViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10ssp">

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/home"
      style="@style/Large.Regular.White"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_2sdp"
      android:background="@drawable/menu_item_background"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:text="@string/home"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/history"
      style="@style/Large.Regular.White"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_12sdp"
      android:background="@drawable/menu_item_background"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:text="@string/history"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/home" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/contact"
      style="@style/Large.Regular.White"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_12ssp"
      android:background="@drawable/menu_item_background"
      android:gravity="center"
      android:padding="@dimen/_8sdp"
      android:text="@string/contact"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/history" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>