<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="com.lombaa.firetv.ui.contact.ContactViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/header"
      style="@style/Large.Regular.White"
      android:layout_width="0dp"
      android:layout_height="60dp"
      android:background="@color/colorPrimary"
      android:gravity="center_vertical"
      android:paddingStart="@dimen/_24sdp"
      android:text="@string/contact"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/left_guideline"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/center_guideline"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/right_guideline"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/email"
      style="@style/Normal.Regular.Black"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_12sdp"
      android:padding="@dimen/_8sdp"
      android:text="@string/email_id"
      app:layout_constraintEnd_toStartOf="@id/center_guideline"
      app:layout_constraintStart_toStartOf="@id/left_guideline"
      app:layout_constraintTop_toBottomOf="@id/header" />


    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/phoneNum"
      style="@style/Normal.Regular.Black"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_10ssp"
      android:padding="@dimen/_8sdp"
      android:text="@string/phone_number"
      app:layout_constraintEnd_toStartOf="@id/center_guideline"
      app:layout_constraintStart_toStartOf="@id/left_guideline"
      app:layout_constraintTop_toBottomOf="@id/email" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/address"
      style="@style/Normal.Regular.Black"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_10ssp"
      android:padding="@dimen/_8sdp"
      android:text="@string/address"
      app:layout_constraintEnd_toStartOf="@id/center_guideline"
      app:layout_constraintStart_toStartOf="@id/left_guideline"
      app:layout_constraintTop_toBottomOf="@id/phoneNum" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/emailValue"
      style="@style/Normal.Regular.Black"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_12sdp"
      android:padding="@dimen/_8sdp"
      android:text="@{viewModel.email}"
      app:layout_constraintEnd_toEndOf="@id/right_guideline"
      app:layout_constraintStart_toEndOf="@id/center_guideline"
      app:layout_constraintTop_toBottomOf="@id/header" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/PhoneValue"
      style="@style/Normal.Regular.Black"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_10ssp"
      android:padding="@dimen/_8sdp"
      android:text="@{viewModel.phone}"
      app:layout_constraintEnd_toEndOf="@id/right_guideline"
      app:layout_constraintStart_toEndOf="@id/center_guideline"
      app:layout_constraintTop_toBottomOf="@id/emailValue" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/addressValue"
      style="@style/Normal.Regular.Black"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_10ssp"
      android:padding="@dimen/_8sdp"
      android:text="@{viewModel.address}"
      app:layout_constraintEnd_toEndOf="@id/right_guideline"
      app:layout_constraintStart_toEndOf="@id/center_guideline"
      app:layout_constraintTop_toBottomOf="@id/PhoneValue" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>